# CORE                                                                                     #
#   Add here everything which connected to the core: (spells,groups,maps etc..)            #
#                                                                                          #
############################################################################################

~>XX.07.2012:.

- Fixed crashes on despawning abominations during Professor Putricide's phase transition.
- Fix Blood-Queen Lana'thel.
- Fix ICC: Lich King.
- Fix Achievement: Not Even a Scratch. (Merge to TC (Apr 22, 2012))
- Battleground/Strand of the Ancients: Fix broken gate state.
- Increased default ground search range, 10 yards was insufficient for many flying creatures.
- Attempt to fix some rare steady shot crashes.
- Changed how boss creatures are identified, creature_template.
- Disable LoS check for destroyed destructible buildings.
- Set melee sheath as default only for creatures that do not have creature_addon data.
- Fix holy shock cast on friendly opposing team going on cooldown and saying invalid target.
- Fixed Concussion Blow damage part.
- Attempt on converting updatewaterstate for use with units (pets and vehicles).
- Fix Movement part 2.
- Fix Movement part 1.
- Fix not using Disengage while rooted.
- Fix not using Shadowstep while rooted.
- Fix no combo points after Mind Control.
- Fix Blessing of Ancient Kings (Val'anyr, Hammer of Ancient Kings).
- Fix Priest: Shadowfiend.
- Fix Improved Succubuss Duration.
- Fix Lifebloom's spell power coefficient. (By Diton Ooo Yeah!)
- Fix Lifebloom's gain from Empowered Rejuvenation. (By Diton Ooo Yeah!)
- Fix totems LoS!
- Fix Glyph of Totem of Wrath.
- Fix Grounding Totem.

~>17.07.2012:

- Implemented Crowd Control Delay.
- Fix Slice and Dice and Honor Among Thieves. (By Diton Ooo Yeah!)
- Fix Halion Portal and sindragosa.
- Fix Anti-Magic Shell.
- Fix dispel magic combat.
- Fix Healthstone Coefficient.
- Fix Health Funnel.